--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ title: Stephan K.
 email: kibongesp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Blog tackling technological topics related to Software Engineering, Web Development and Design, Data Science, and more...
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kmurphs.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: murphs_k
 github_username:  kmurphs
 
-permalink: pretty
+permalink: /posts/:title
 
 
 # Build settings
